Add timezone module

--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "etc/puppetlabs/code/environments/mgmt/modules/firewall"]
 	path = etc/puppetlabs/code/environments/mgmt/modules/firewall
 	url = https://github.com/puppetlabs/puppetlabs-firewall.git
+[submodule "etc/puppetlabs/code/environments/mgmt/modules/timezone"]
+	path = etc/puppetlabs/code/environments/mgmt/modules/timezone
+	url = https://github.com/attachmentgenie/attachmentgenie-timezone.git
