Add selinux module

--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "etc/puppetlabs/code/environments/mgmt/modules/datacat"]
 	path = etc/puppetlabs/code/environments/mgmt/modules/datacat
 	url = https://github.com/richardc/puppet-datacat.git
+[submodule "etc/puppetlabs/code/environments/mgmt/modules/selinux"]
+	path = etc/puppetlabs/code/environments/mgmt/modules/selinux
+	url = https://github.com/voxpupuli/puppet-selinux.git
